styles: add comments to code & tidy

--- a/bag/templates/bag/product-image.html
+++ b/bag/templates/bag/product-image.html
@@ -1,3 +1,4 @@
+<!-- Product Image -->
 {% if item.product.image %}
     <a href="{% url 'product_detail' item.product.id %}">
         <img class="img-fluid" src="{{ item.product.image.url }}" alt="{{ product.name }}">
