--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -63,12 +63,20 @@
                 </div>
                 {% endif %}
 
-                <!-- Checkout Button -->
                 <div class="col-12">
-                    <a href="{% url 'view_bag' %}" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm float-end">
-                        <p class="d-inline">CHECKOUT</p>
-                        <i class="fas fa-lock d-inline"></i>
-                    </a>
+                    {% if on_bag_page %}
+                        <!-- Checkout Button - if already on bag page -->
+                        <a href="{% url 'checkout' %}" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm float-end">
+                            <p class="d-inline">CHECKOUT</p>
+                            <i class="fas fa-lock d-inline"></i>
+                        </a>
+                    {% else %}
+                        <!-- View Bag Button - if not already on bag page -->
+                        <a href="{% url 'view_bag' %}" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm float-end">
+                            <p class="d-inline">VIEW BAG</p>
+                            <i class="fas fa-lock d-inline"></i>
+                        </a>
+                    {% endif %}
                 </div>
             </div>
 
