refactor: move JS files to relevant apps

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -145,6 +145,6 @@
     </script>
 
     <!-- Quantity Input JS -->
-    <script src="{% static 'js/quantity_input.js' %}"></script>
+    <script src="{% static 'bag/js/quantity_input.js' %}"></script>
 
 {% endblock %}
