--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -221,6 +221,6 @@
 
 {% block extra_js %}
     <!-- Quantity Input JS -->
-    <script src="{% static 'js/quantity_input.js' %}"></script>
+    <script src="{% static 'products/js/quantity_input.js' %}"></script>
 {% endblock %}
 
