--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -149,9 +149,6 @@
 {% endblock %}
 
 {% block extra_js %}
-    <!-- Scroll to Top JS -->
-    <script src="{% static 'js/scroll_top.js' %}"></script>
-
     <!-- Sort Box JS -->
-    <script src="{% static 'js/sort_box.js' %}"></script>
+    <script src="{% static '/products/js/sort_box.js' %}"></script>
 {% endblock %}
