--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -72,7 +72,7 @@
 
 {% block extra_js %}
     <!-- Rating Selector JS -->
-    <script src="{% static 'js/rating_select.js' %}"></script>
+    <script src="{% static 'reviews/js/rating_select.js' %}"></script>
 {% endblock %}
 
 
