feat: add loading spinner to checkout

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -131,6 +131,13 @@
             </div>
         </div>
     </div>
+
+    <div id="loading-overlay">
+        <div class="loading-spinner">
+            <i class="text-yellow fa-3x fas fa-cog fa-spin"></i>
+        </div>
+        
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
