feat: add reviews to profile page

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -155,7 +155,7 @@
                                 </div>
 
                                 
-                                <p class="d-inline weight-light review-date m-0 ib-lh-1">{{ review.created_on }}</p>
+                                <p class="d-inline weight-light review-date m-0 ib-lh-1">{{ review.created_on|date:"d/m/Y" }}</p>
                             </div>
                         </div>
                         <div class="col-12 col-sm-3 text-start text-sm-end">
