--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -94,7 +94,7 @@
 
                             <!-- Product Name -->
                             <div class="card-body bg-ib-white pb-2">
-                                <h5 class="text-uppercase text-center font-body weight-semibold">{{ product.name }}</h5>
+                                <h5 class="text-uppercase text-center font-body weight-semibold text-ib-dark">{{ product.name }}</h5>
                             </div>
 
                             <!-- Card Footer - Rating, Price & Edit/Delete -->
@@ -111,16 +111,16 @@
                                                 <span class="rating-hex-small rating-hex-{% if product.rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
                                                 <span class="rating-hex-small rating-hex-{% if product.rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
                                                 <span class="rating-hex-small me-2 rating-hex-{% if product.rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <p class="d-inline font-body mt-n2 text-nowrap">{{ product.review_count }} REVIEW{% if product.review_count > 1%}S{% endif %}</p>
+                                                <p class="d-inline font-body mt-n2 text-nowrap text-ib-dark">{{ product.review_count }} REVIEW{% if product.review_count > 1%}S{% endif %}</p>
                                             </div>
                                         </div>
 
                                         <div class="row">
                                             <!-- Product EDIT / DELETE Buttons -->
                                             {% if request.user.is_superuser %}
-                                                <div class="card-edit-delete-div mt-2 gy-3">
+                                                <div class="mt-2 gy-3">
                                                     <a href="" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
-                                                    <a href="" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
+                                                    <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                            
                                                 </div>
                                             {% endif %}
                                         </div>
@@ -129,7 +129,7 @@
                                     <div class="col-6 ps-0 mt-auto d-flex justify-content-end">
                                         
                                         <!-- Product Price -->
-                                        <div class=""><p class="card-price weight-semibold ib-lh-1">£{{ product.price }}</p></div>
+                                        <div class=""><p class="card-price weight-semibold ib-lh-1 text-ib-dark">£{{ product.price }}</p></div>
                                     </div>
                                 </div>
                             </div>
